[package]
name = "corpus-database-dsl"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
log = "0.4"
datapond = { git = "https://github.com/vakaras/datapond.git", branch = "new-generator" }
