[package]
name = "corpus-database"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.128"
serde_derive = "1.0.1"
serde_json = "1.0.66"
failure = "0.1.5"
bincode = "1.3.3"
log = "0.4"

[dev-dependencies]
rand = "0.8.4"

[build-dependencies]
corpus-database-dsl = { path = "../database-dsl" }
