[package]
name = "corpus-database"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vastrauskas@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_derive = "1.0.136"
serde_json = "1.0.85"
anyhow = "1.0"
bincode = "1.3.3"
log = "0.4"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
corpus-database-dsl = { path = "../database-dsl" }
