[package]
name = "corpus-manager"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vytautas.astrauskas@inf.ethz.ch>"]
edition = "2018"
license = "MIT"
default-run = "corpus-manager-driver"
build = "build.rs"

[lib]

[[bin]]
name = "corpus-manager-driver"
test = false
path = "src/main.rs"

[dependencies]
corpus-extractor = { path = "../extractor" }
corpus-database = { path = "../database" }
corpus-queries-derive = { path = "../queries-derive" }
datapond-derive = { git = "https://github.com/vakaras/datapond.git", branch = "new-generator" }
structopt = "0.3"
color-backtrace = "0.5"
log = "0.4"
simplelog = "0.10"
chrono = "0.4"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde = "1.0.126"
serde_derive = "1.0.1"
serde_json = "1.0.64"
toml = "0.5"
log-derive = "0.4"
semver = "1.0.0"
cargo = "0.42.0"
tokio-process = "0.2"
tokio = "1.5"
nix = "0.20.0"
failure = "0.1.5"
walkdir = "2"
rustwide = "0.10.0"
crates-index = "0.13"
datafrog = "2"
csv = "1.1"
itertools = "0.10"
tempdir = "0.3"
