[package]
name = "corpus-manager"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vytautas.astrauskas@inf.ethz.ch>"]
edition = "2021"
license = "MIT"
default-run = "corpus-manager-driver"
build = "build.rs"

[lib]

[[bin]]
name = "corpus-manager-driver"
test = false
path = "src/main.rs"

[dependencies]
corpus-extractor = { path = "../extractor" }
corpus-database = { path = "../database" }
corpus-queries-derive = { path = "../queries-derive" }
datapond-derive = { git = "https://github.com/vakaras/datapond.git", branch = "new-generator" }
structopt = "0.3"
color-backtrace = "0.5"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
toml = "0.5"
log-derive = "0.4"
semver = "1.0.7"
cargo = "0.61.0"
tokio-process = "0.2"
tokio = "1.17"
nix = "0.24.0"
failure = "0.1.5"
walkdir = "2"
rustwide = "0.14.0"
crates-index = "0.18"
datafrog = "2"
csv = "1.1"
itertools = "0.10"
tempdir = "0.3"
