#cargo-features = ["edition"]

[package]
name = "rustql-extractor"
version = "0.1.0"
authors = ["Nicolas Winkler <niwinkle@student.ethz.ch>"]
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "rustc"
path = "src/main.rs"

[dependencies]
serde = "*"
serde_json = "*"
bincode = "*"
rustc_tools_util = "*"
log = "*"
env_logger = "*"

[dependencies.rustql-common]
path = "../rustql-common"

