[package]
name = "rustql-linker"
version = "0.1.0"
authors = ["Nicolas Winkler <nicolas.winkler@gmx.ch>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bincode = "*"
datafrog = "0.1.0"
env_logger = "*"
log = "*"
serde = "*"
serde_json = "*"

[dependencies.rustql-common]
path = "../rustql-common"
