[package]
name = "rustql-query"
version = "0.1.0"
authors = ["Nicolas Winkler <nicolas.winkler@gmx.ch>"]
license = "MIT/Apache-2.0"
build = "build.rs"

[build-dependencies.lalrpop]
version = "0.15.1"

[dependencies]
regex = "0.2.1"
serde_derive = "*"
serde_json = "*"
serde = "*"
bincode = "*"
libloading = "*"

[dependencies.lalrpop-util]
version = "0.15.1"

[dependencies.rustql-common]
path = "../rustql-common"


